<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="411dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/computerThrowImg5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="76dp"
            android:background="#4E00E9"
            android:src="@drawable/rock"
            card_view:layout_constraintBottom_toTopOf="@+id/textView17"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.862" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="81dp"
            android:layout_height="50dp"
            android:text="@string/v_s"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/youThrow5"
            card_view:layout_constraintStart_toEndOf="@+id/computerThrowImg5"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/youThrow5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="68dp"
            android:background="#4E00E9"
            android:src="@drawable/rock"
            card_view:layout_constraintBottom_toTopOf="@+id/textView16"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.877" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="93dp"
            android:layout_height="24dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="28dp"
            android:text="@string/you"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textView15"
            card_view:layout_constraintVertical_bias="0.937" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="93dp"
            android:layout_height="24dp"
            android:layout_marginBottom="28dp"
            android:text="@string/computer"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/textView16"
            card_view:layout_constraintHorizontal_bias="0.458"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/win_lose5"
            android:layout_width="150dp"
            android:layout_height="23dp"
            android:text="@string/you_win"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/textView15"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.355" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>